# TopoField

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: ablation-status.md  paper-claims.md  repro-check.md  validate-graphs.md
.claude/hooks/: guard_third_party.py  validate_hdg.py
configs/: base.yaml  taskT_full_hdg_s3dsilver.yaml
containers/: tesseract.def
data/: MANIFEST.md
docs/: AUTONOMOUS_LOG.md  annotation_guidelines.md  annotator.md  baselines.md  claude_code_setup_guide.md  containers.md  datasets.md  explanation.md  hdg_schema.md  hpc_quota.md  research_plan_final.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-hdg-schema-v0.md  0003-storage-policy.md  0004-room-area-optional.md  README.md
docs/phase0/: tesseract_analysis.md
results/: README.md
results/phase0/experiment2/: results.json  summary.md
results/phase3/: README.md
schemas/: hdg.schema.json
scripts/: launch_train.sh  run_baseline.sh  run_lobo.sh  setup_env.sh  smoke.sh
scripts/data/: download_cubicasa5k.slurm  download_f3loc_data.slurm
scripts/envs/: README.md  build_container_tesseract.slurm  build_f3loc.slurm  build_house_diffusion.slurm  build_laser.slurm  build_polyroom.slurm  build_raster-to-graph.slurm  build_roomformer.slurm  build_tesseract.slurm  install_annotator.slurm
scripts/pipeline/: extract_real_images.slurm
scripts/slurm/: cpu.slurm  gpu.slurm
src/topofield/: __init__.py  cli.py
src/topofield/annotator/: __init__.py  (+2 more)
tests/: conftest.py  test_annotator_api.py  test_annotator_ops.py  test_dataset.py  test_hdg.py  test_metrics.py  test_models.py  test_schema.py  test_simulation.py  test_synthetic.py  test_tesseract_adapter.py
tests/fixtures/: hospital_toy.json
(+28 files in other folders)
